@@ -105,6 +105,17 @@
 		is semidet.
 :- mode tree234__foldl(pred(in, in, di, uo) is det, in, di, uo) is det.
 
+:- pred tree234__foldl2(pred(K, V, T, T, U, U), tree234(K, V), T, T, U, U).
+:- mode tree234__foldl2(pred(in, in, in, out, in, out) is det, 
+		in, in, out, in, out) is det.
+:- mode tree234__foldl2(pred(in, in, in, out, in, out) is semidet, 
+		in, in, out, in, out) is semidet.
+:- mode tree234__foldl2(pred(in, in, in, out, di, uo) is det,
+		in, in, out, di, uo) is det.
+:- mode tree234__foldl2(pred(in, in, di, uo, di, uo) is det,
+		in, di, uo, di, uo) is det.
+
+
 :- pred tree234__map_values(pred(K, V, W), tree234(K, V), tree234(K, W)).
 :- mode tree234__map_values(pred(in, in, out) is det, in, out) is det.
 :- mode tree234__map_values(pred(in, in, out) is semidet, in, out) is semidet.
@@ -2439,6 +2450,26 @@ tree234__foldl(Pred, four(K0, V0, K1, V1, K2, V2, T0, T1, T2, T3), Acc0, Acc) :-
 	tree234__foldl(Pred, T2, Acc4, Acc5),
 	call(Pred, K2, V2, Acc5, Acc6),
 	tree234__foldl(Pred, T3, Acc6, Acc).
+
+tree234__foldl2(_Pred, empty, A, A) --> [].
+tree234__foldl2(Pred, two(K, V, T0, T1), A0, A) -->
+	tree234__foldl2(Pred, T0, A0, A1),
+	call(Pred, K, V, A1, A2),
+	tree234__foldl2(Pred, T1, A2, A).
+tree234__foldl2(Pred, three(K0, V0, K1, V1, T0, T1, T2), A0, A) -->
+	tree234__foldl2(Pred, T0, A0, A1),
+	call(Pred, K0, V0, A1, A2),
+	tree234__foldl2(Pred, T1, A2, A3),
+	call(Pred, K1, V1, A3, A4),
+	tree234__foldl2(Pred, T2, A4, A).
+tree234__foldl2(Pred, four(K0, V0, K1, V1, K2, V2, T0, T1, T2, T3), A0, A) -->
+	tree234__foldl2(Pred, T0, A0, A1),
+	call(Pred, K0, V0, A1, A2),
+	tree234__foldl2(Pred, T1, A2, A3),
+	call(Pred, K1, V1, A3, A4),
+	tree234__foldl2(Pred, T2, A4, A5),
+	call(Pred, K2, V2, A5, A6),
+	tree234__foldl2(Pred, T3, A6, A).
 
 %------------------------------------------------------------------------------%
 
